# 3d-rendering-cookbook

./: .clang-tidy  CMakeLists.txt  FetchAssets.bat  README.md
assets/: srgb.glsl
assets/game-animation/: gltf.vert
assets/shaders/: cube-map-duck-frag.glsl  cube-map-duck-vert.glsl  cube-map-vert.glsl  full-screen-quad.vert  full-screen-triangle.vert  scene-shadow.frag  scene-shadow.vert  shadow.frag  shadow.vert
assets/vk-triangle/: triangle-shader.vert  triangle-vert.spv
chapters/01-triangle/: triangle.cpp
chapters/02-cube/: cube.cpp
chapters/03-image/: image.cpp
chapters/04-assimp/: assimp.cpp
chapters/05-mesh-optimizer/: mesh-optimizer.cpp
chapters/06-vertex-pulling/: vertex-pulling.cpp
chapters/07-cube-map/: cube-map.cpp
chapters/08-converters/: converters.cpp  file-dialog.cpp
chapters/09-pbr-shading/: pbr-shading.cpp
chapters/10-scene-renderer/: scene-renderer.cpp
chapters/11-shadows/: shadows.cpp
chapters/xx-game-animation/: game-animation.cpp
chapters/xx-vk-triangle/: vk-triangle.cpp
shared/: animation.h  assimp-helpers.cpp  assimp-helpers.h  cube-map.cpp  cube-map.h  imgui-wrapper.cpp  imgui-wrapper.h  material.cpp  material.h  mesh.cpp  mesh.h  scene.cpp  scene.h  tmp.cpp  types.h
shared/vulkan/: vulkan-device.cpp  vulkan-device.hpp  vulkan-graphics-context.cpp  vulkan-graphics-context.hpp  vulkan-swap-chain.cpp  vulkan-swap-chain.hpp
tools/fetch-data/: FetchData.deps.json
